2009-12-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs: Scan a few more
	  output lines to check whether xsp has started.

2009-12-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs:
	* MonoDevelop.AspNet.Gui/BrowserLauncher.cs: Scan xsp output
	  for "Listening on port: " to detect when it's started,
	  instead of polling the server.

2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Deployment/WebDeployService.cs: Name
	  threads to make debugging easier.

2009-12-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: Worked
	  on ASP.NET code completion.

2009-12-01  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.AspNet.csproj:
	* MonoDevelop.AspNet.addin.xml:
	* MonoDevelop.AspNet.Parser.Dom/RootNode.cs:
	* MonoDevelop.AspNet.Parser.Dom/ExpressionNode.cs:
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: Worked
	  on ASP.NET code completion.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs:
	* MonoDevelop.AspNet/VerifyCodeBehindBuildStep.cs:
	* MonoDevelop.AspNet.Deployment/WebDeployService.cs:
	* MonoDevelop.AspNet.Deployment/AspNetDeployServiceExtension.cs:
	  Introduced the ConfigurationSelector class to all methods
	  that previously took a configuration name as string. This
	  eliminates the ambiguity between solution configuration
	  names and project configuration names.

2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs: Track API. Set
	  UserAssemblyPaths. Get correct configuration.

	* MonoDevelop.AspNet/AspNetExecutionCommand.cs: Add property
	  for list of user assemblies.

2009-11-19  Michael Hutchinson  <mhutchinson@novell.com>
